--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import "reset.css";
+html,
 body{
     background-color: #f6f9fc;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -6,6 +7,8 @@ body{
     flex-direction:  column;
     align-items: center;
     padding: 50px;
+    width : 100%;
+    height : 100%;
 }
 
 .canvas{
