--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ body {
     weight : 100%;
 }
 
+html {
+-ms-content-zooming: none;
+-ms-touch-action: pan-x pan-y;
+}
+
+body{
+width:320px;
+overflow-x:hidden;
+}
+
 main{
     position: fixed;
     overflow: hidden;
